added image for catalog section

--- a/index.html
+++ b/index.html
@@ -92,17 +92,14 @@
         </nav>
         <div class="login">
           <button type="button" class="login__btn">
-            <img
-              src="./img/search-black.svg"
-              alt="search"
-              class="login__btn-image"
-            />
+            <span class="material-symbols-rounded"> search </span>
           </button>
           <button type="button" class="login__btn">
-            <img src="./img/basket.svg" alt="basket" class="login__btn-image" />
+            <span class="login__btn-badge">6</span>
+            <span class="material-symbols-rounded"> shopping_cart </span>
           </button>
-          <button type="button" class="login__btn btn">
-            <img src="./img/logout.svg" alt="logout" class="login__btn-image" />
+          <button type="button" class="btn">
+            <span class="material-symbols-rounded"> logout </span>
             <p>Login</p>
           </button>
         </div>
@@ -127,7 +124,9 @@
             <h3 class="sidebar__title">Categories</h3>
             <ul class="menu-categories">
               <li class="menu-categories__item">
-                <a href="#!" class="menu-categories__link menu-categories__link--active"
+                <a
+                  href="#!"
+                  class="menu-categories__link menu-categories__link--active"
                   >House Plants
                   <span class="menu-categories__quantity">(33)</span>
                 </a>
@@ -251,7 +250,7 @@
                   </a>
                 </div>
                 <a href="#!" class="card-item__content">
-                  <h4 class="card-item__title">Angel Wing Begonia</h4>
+                  <h4 class="card-item__title">Barberton Daisy</h4>
                   <p class="card-item__price">$119.00</p>
                 </a>
               </div>
@@ -303,7 +302,7 @@
                     </button>
                   </div>
                   <a href="#!" class="card-item__link-wrapper">
-                    <img src="./img/plants-2.png" alt="African Violet" />
+                    <img src="./img/flowers-3.png" alt="African Violet" />
                     <span class="card-item__badge">13% OFF</span>
                   </a>
                 </div>
@@ -335,12 +334,12 @@
                     </button>
                   </div>
                   <a href="#!" class="card-item__link-wrapper">
-                    <img src="./img/flowers-1.png" alt="Barberton Daisy" />
+                    <img src="./img/flowers-4.png" alt="Beach Spider Lily" />
                   </a>
                 </div>
                 <a href="#!" class="card-item__content">
-                  <h4 class="card-item__title">Angel Wing Begonia</h4>
-                  <p class="card-item__price">$119.00</p>
+                  <h4 class="card-item__title">Beach Spider Lily</h4>
+                  <p class="card-item__price">$129.00</p>
                 </a>
               </div>
               <div class="card-item">
@@ -363,12 +362,12 @@
                     </button>
                   </div>
                   <a href="#!" class="card-item__link-wrapper">
-                    <img src="./img/flowers-1.png" alt="Barberton Daisy" />
+                    <img src="./img/flowers-5.png" alt="Blushing Bromeliad" />
                   </a>
                 </div>
                 <a href="#!" class="card-item__content">
-                  <h4 class="card-item__title">Angel Wing Begonia</h4>
-                  <p class="card-item__price">$119.00</p>
+                  <h4 class="card-item__title">Blushing Bromeliad</h4>
+                  <p class="card-item__price">$139.00</p>
                 </a>
               </div>
               <div class="card-item">
@@ -391,12 +390,12 @@
                     </button>
                   </div>
                   <a href="#!" class="card-item__link-wrapper">
-                    <img src="./img/flowers-1.png" alt="Barberton Daisy" />
+                    <img src="./img/flowers-6.png" alt="Aluminum Plant" />
                   </a>
                 </div>
                 <a href="#!" class="card-item__content">
-                  <h4 class="card-item__title">Angel Wing Begonia</h4>
-                  <p class="card-item__price">$119.00</p>
+                  <h4 class="card-item__title">Aluminum Plant</h4>
+                  <p class="card-item__price">$179.00</p>
                 </a>
               </div>
               <div class="card-item">
@@ -419,12 +418,12 @@
                     </button>
                   </div>
                   <a href="#!" class="card-item__link-wrapper">
-                    <img src="./img/flowers-1.png" alt="Barberton Daisy" />
+                    <img src="./img/flowers-7.png" alt="Bird's Nest Fern" />
                   </a>
                 </div>
                 <a href="#!" class="card-item__content">
-                  <h4 class="card-item__title">Angel Wing Begonia</h4>
-                  <p class="card-item__price">$119.00</p>
+                  <h4 class="card-item__title">Bird's Nest Fern</h4>
+                  <p class="card-item__price">$99.00</p>
                 </a>
               </div>
               <div class="card-item">
@@ -447,12 +446,12 @@
                     </button>
                   </div>
                   <a href="#!" class="card-item__link-wrapper">
-                    <img src="./img/flowers-1.png" alt="Barberton Daisy" />
+                    <img src="./img/flowers-8.png" alt="Broadleaf Lady Palm" />
                   </a>
                 </div>
                 <a href="#!" class="card-item__content">
-                  <h4 class="card-item__title">Angel Wing Begonia</h4>
-                  <p class="card-item__price">$119.00</p>
+                  <h4 class="card-item__title">Broadleaf Lady Palm</h4>
+                  <p class="card-item__price">$59.00</p>
                 </a>
               </div>
               <div class="card-item">
@@ -475,42 +474,26 @@
                     </button>
                   </div>
                   <a href="#!" class="card-item__link-wrapper">
-                    <img src="./img/flowers-1.png" alt="Barberton Daisy" />
+                    <img src="./img/flowers-9.png" alt="Barberton Daisy" />
                   </a>
                 </div>
                 <a href="#!" class="card-item__content">
-                  <h4 class="card-item__title">Angel Wing Begonia</h4>
-                  <p class="card-item__price">$119.00</p>
+                  <h4 class="card-item__title">Chinese Evergreen</h4>
+                  <p class="card-item__price">$39.00</p>
                 </a>
               </div>
             </div>
-            <div class="pagination">
-              <nav class="pagination__nav">
-                <ul class="pagination__list">
-                  <li class="pagination__item">
-                    <a
-                      class="pagination__link pagination__link_active"
-                      href="#!"
-                      >1</a
-                    >
-                  </li>
-                  <li class="pagination__item">
-                    <a class="pagination__link" href="#!">2</a>
-                  </li>
-                  <li class="pagination__item">
-                    <a class="pagination__link" href="#!">3</a>
-                  </li>
-                  <li class="pagination__item">
-                    <a class="pagination__link" href="#!">4</a>
-                  </li>
-                  <li class="pagination__item">
-                    <a class="pagination__link" href="#!">
-                      <img src="./img/arrow-right.svg" alt="arrow-right" />
-                    </a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
+            <nav class="pagination">
+              <a href="#!" class="pagination__link pagination__link--active"
+                >1</a
+              >
+              <a href="#!" class="pagination__link">2</a>
+              <a href="#!" class="pagination__link">3</a>
+              <a href="#!" class="pagination__link">4</a>
+              <a href="#!" class="pagination__link">
+                <span class="material-symbols-rounded"> chevron_right </span>
+              </a>
+            </nav>
           </div>
         </section>
         <section class="popular">
@@ -773,15 +756,19 @@
             <img src="./img/Logo.svg" alt="" />
           </a>
           <a href="#!" class="footer__link">
-            <span class="material-symbols-rounded"> location_on </span>
+            <span class="material-symbols-rounded footer__icon">
+              location_on
+            </span>
             <span>70 West Buckingham Ave. Farmingdale, NY 11735</span>
           </a>
           <a href="mailto:contact@greenshop.com" class="footer__link">
-            <span class="material-symbols-rounded"> mail </span>
+            <span class="material-symbols-rounded footer__icon"> mail </span>
             <span>contact@greenshop.com</span>
           </a>
           <a href="tel:+8801911717490" class="footer__link">
-            <span class="material-symbols-rounded"> phone_in_talk </span>
+            <span class="material-symbols-rounded footer__icon">
+              phone_in_talk
+            </span>
             <span>+88 01911 717 490</span>
           </a>
         </div>
