--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
           </div>
         </div>
         <div class="footer__mid">
-          <a href="#!" class="footer__logo">
+          <a href="#!" class="logo">
             <img src="./img/Logo.svg" alt="" />
           </a>
           <a href="#!" class="footer__link">
