created range and added hover effect for btn

--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@
               </li>
             </ul>
             <h3 class="sidebar__title">Price Range</h3>
+            <div class="menu-filter">
+              <input type="range" id="volume" name="volume" min="0" max="10" class="range">
+              <p class="menu-filter__text">Price: <span>$39 - $1230</span></p>
+              <button class="btn menu-filter__btn">Filter</button>
+            </div>
             <h3 class="sidebar__title">Size</h3>
             <ul class="menu-categories">
               <li class="menu-categories__item">
@@ -513,7 +518,9 @@
               </p>
               <button type="button" class="popular__btn btn">
                 Find More
-                <img src="./img/Arrow-Right-white.svg" alt="" />
+                <span class="material-symbols-rounded">
+                  arrow_right_alt
+                  </span>
               </button>
             </div>
           </div>
@@ -533,7 +540,9 @@
               </p>
               <button type="button" class="popular__btn btn">
                 Find More
-                <img src="./img/Arrow-Right-white.svg" alt="" />
+                <span class="material-symbols-rounded">
+                  arrow_right_alt
+                  </span>
               </button>
             </div>
           </div>
