--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </button>
           <button type="button" class="btn">
             <span class="material-symbols-rounded"> logout </span>
-            <p>Login</p>
+            <span class="login__text">Login</span>
           </button>
         </div>
       </header>
@@ -182,7 +182,14 @@
             </ul>
             <h3 class="sidebar__title">Price Range</h3>
             <div class="menu-filter">
-              <input type="range" id="volume" name="volume" min="0" max="10" class="range">
+              <input
+                type="range"
+                id="volume"
+                name="volume"
+                min="0"
+                max="10"
+                class="range"
+              />
               <p class="menu-filter__text">Price: <span>$39 - $1230</span></p>
               <button class="btn menu-filter__btn">Filter</button>
             </div>
@@ -518,9 +525,7 @@
               </p>
               <button type="button" class="popular__btn btn">
                 Find More
-                <span class="material-symbols-rounded">
-                  arrow_right_alt
-                  </span>
+                <span class="material-symbols-rounded"> arrow_right_alt </span>
               </button>
             </div>
           </div>
@@ -540,9 +545,7 @@
               </p>
               <button type="button" class="popular__btn btn">
                 Find More
-                <span class="material-symbols-rounded">
-                  arrow_right_alt
-                  </span>
+                <span class="material-symbols-rounded"> arrow_right_alt </span>
               </button>
             </div>
           </div>
@@ -841,7 +844,7 @@
             </div>
           </div>
         </div>
-        <p class="copyright">&copy; 2021 GreenShop. All Rights Reserved.</p>
+        <p class="copyright">&copy;2021 GreenShop. All Rights Reserved.</p>
       </footer>
     </div>
   </body>
