--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container">
       <header class="header">
         <a href="#!" class="logo">
-          <img src="./img/logo.svg" alt="logo" class="logo__image" />
+          <img src="./img/Logo.svg" alt="logo" class="logo__image" />
         </a>
         <nav class="nav">
           <ul class="nav-list">
